# CG-Project-main

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
media/: CasaSimples_2.mtl  Drone.mtl
media/horse/: horse_obj.mtl
projects/base/: model.cpp  model.h  skybox.cpp  texture.cpp
projects/final_project/: AABBBox.cpp  AABBBox.h  CMakeLists.txt  HouseBox.cpp  HouseBox.h  ballModel.cpp  ballModel.h  ballfs.fs  core.cpp  core.h  cylinder.cpp  cylinder.h  door.cpp  door.h  helicopter.cpp  helicopter.h  house.cpp  house.h  lamp.cpp  lamp.h  main.cpp  multiple_lights.fs  multiple_lights2.fs  obj_seq.cpp  obj_seq.h  screenShot.cpp  screenShot.h
